--- a/webapp/views/index-notable.jade
+++ b/webapp/views/index-notable.jade
@@ -1,15 +1,19 @@
 extends layout
 
 block content
-  p #{title}
+  p Select student name (collection) and class ID (collection attribute)
   p List of available students:
   ul
-    each tb in list_tb
-      li #{tb.name}
+    each col in list_col
+      li #{col.name}
 
+  p *: required
   form(name="add-estimation", method="get")
     div.input
-      span.label Input student: 
-      input(type="text", name="title")
+      span.label Input student name (*): 
+      input(type="text", name="student_name")
+      br
+      span.label Input class ID: 
+      input(type="text", name="class_id")      
     div.actions
       input(type="submit", value="View")
